<resources>
    <string name="app_name">RedditClient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author: </string>
    <string name="ratting">Ratting:</string>
    <string name="number_of_comments">Number of comments:</string>
    <string name="post_date">Post date:</string>
    <string name="cant_load_data">Can`t load data</string>
    <string name="subreddit">Subreddit:</string>
</resources>
