<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_small">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            tool:text="Title"
            android:layout_marginTop="@dimen/margin_medium" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tool:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_small"/>

        <TextView
            android:id="@+id/tvAuthorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            app:layout_constraintTop_toBottomOf="@+id/ivImage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvAuthorTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvAuthorTitle"
            android:layout_marginStart="@dimen/margin_smaller"
            app:layout_constraintStart_toEndOf="@id/tvAuthorTitle"
            tool:text="Max"/>

        <TextView
            android:id="@+id/tvSubredditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subreddit"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuthorTitle"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvSubreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvSubredditTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvSubredditTitle"
            app:layout_constraintStart_toEndOf="@id/tvSubredditTitle"
            android:layout_marginStart="@dimen/margin_smaller"
            tool:text="qaz"/>

        <TextView
            android:id="@+id/tvRattingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratting"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubredditTitle"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvRatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvRattingTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvRattingTitle"
            app:layout_constraintStart_toEndOf="@id/tvRattingTitle"
            android:layout_marginStart="@dimen/margin_smaller"
            tool:text="10"/>

        <TextView
            android:id="@+id/tvNumberOfCommentsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_comments"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRattingTitle"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNumberOfComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvNumberOfCommentsTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvNumberOfCommentsTitle"
            app:layout_constraintStart_toEndOf="@id/tvNumberOfCommentsTitle"
            android:layout_marginStart="@dimen/margin_smaller"
            tool:text="10000"/>

        <TextView
            android:id="@+id/tvPostDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_date"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNumberOfCommentsTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPostDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvPostDateTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvPostDateTitle"
            app:layout_constraintStart_toEndOf="@id/tvPostDateTitle"
            android:layout_marginStart="@dimen/margin_smaller"
            tool:text="3 hour ago"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>